[package]
name = "foo"
version = "0.1.0"
authors = ["andrew webber (personal) <andrewvwebber@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.openssl]
version = "0.10.30"
features = [
    "vendored"
]

[dependencies]
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "time", "json"] }
async-graphql = "1.16"
async-graphql-actix-web = "1.4.17"
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3"
actix-web-actors = "2.0.0"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
